# dreamcapture

./: .gitignore  MODERNIZATION_ROADMAP.md  README.md
backend/: .env.example  cleanup_expired.py  generate_daily_content.py  pyproject.toml
backend/app/: __init__.py  ai_service.py  auth.py  config.py  database.py  demo_generator.py  main.py  models.py  moderation.py  schemas.py
backend/app/routers/: auth.py  dreams.py  moments.py  upload.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/dreams/[id]/: page.tsx
frontend/components/: AuthModal.tsx  CreateDreamModal.tsx  CreateMomentModal.tsx  DreamCard.tsx  MomentCard.tsx  MomentDetailModal.tsx
frontend/lib/: api.ts  date-utils.ts  store.ts
